--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.0",
-    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.5.0",
-    "recharts": "^2.15.0",
-    "tailwind-merge": "^3.0.0"
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
